--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         showErrorModal(data.error);
                     } else {
                         // Redirect to homepage on successful verification
-                        window.location.href = 'home.php'; // Redirect to your homepage
+                        window.location.href = 'home.html'; // Redirect to your homepage
                     }
                 })
                 .catch(error => {
