--- a/home.html
+++ b/home.html
@@ -91,7 +91,7 @@
                 -1px  1px 0 #fff,
                 1px  1px 0 #fff;
             -webkit-text-stroke: 1px black;
-            text-stroke: 1px black;
+
         }
         .lead4 {
             font-size: 5rem; /* Adjust the font size as needed */
@@ -103,7 +103,7 @@
                 -1px  1px 0 #fff,
                 1px  1px 0 #fff;
             -webkit-text-stroke: 1px black;
-            text-stroke: 1px black;
+
         }
 
         .image_divider2 {
@@ -162,10 +162,9 @@
                             More
                         </a>
                         <div class="dropdown-menu" aria-labelledby="moreDropdown">
-                            <a class="dropdown-item" href="Art.php">Art</a>
-                            <a class="dropdown-item" href="Aboutus.php">About Us</a>
-                            <a class="dropdown-item" href="contact.php">Contact</a>
-                            <a class="dropdown-item" href="news.php">News</a>
+                            <a class="dropdown-item" href="Art.html">Art</a>
+                            <a class="dropdown-item" href="Aboutus.html">About Us</a>
+                            <a class="dropdown-item" href="news.html">News</a>
                         </div>
                     </li>
                 </ul>
