--- a/contact.html
+++ b/contact.html
@@ -68,20 +68,19 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="http://localhost/KwentoQuest/home.php">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="http://localhost/KwentoQuest/home.php">Trailer</a></li>
-                    <li class="nav-item"><a class="nav-link" href="http://localhost/KwentoQuest/home.php">Characters</a></li>
-                    <li class="nav-item"><a class="nav-link" href="http://localhost/KwentoQuest/home.php">Gameplay</a></li>
-                    <li class="nav-item"><a class="nav-link" href="http://localhost/KwentoQuest/home.php">Install</a></li>
+                    <li class="nav-item"><a class="nav-link" href="home.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="home.html">Trailer</a></li>
+                    <li class="nav-item"><a class="nav-link" href="home.html">Characters</a></li>
+                    <li class="nav-item"><a class="nav-link" href="home.html">Gameplay</a></li>
+                    <li class="nav-item"><a class="nav-link" href="home.html">Install</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="moreDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             More
                         </a>
                         <div class="dropdown-menu" aria-labelledby="moreDropdown">
-                            <a class="dropdown-item" href="Art.php">Art</a>
-                            <a class="dropdown-item" href="Aboutus.php">About Us</a>
-                            <a class="dropdown-item" href="contact.php">Contact</a>
-                            <a class="dropdown-item" href="news.php">News</a>
+                            <a class="dropdown-item" href="Art.html">Art</a>
+                            <a class="dropdown-item" href="Aboutus.html">About Us</a>
+                            <a class="dropdown-item" href="news.html">News</a>
                         </div>
                     </li>
                 </ul>
