--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <style>
         body {
-            background-image: url('http://localhost/KwentoQuest/img/MainBG.png'); /* Replace with your accessible image path */
+            background-image: url('img/MainBG.png'); /* Replace with your accessible image path */
             background-size: cover;
             background-position: center;
             height: 100vh;
