--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
         }
 
         .about-section {
-            background-image: url('http://localhost/KwentoQuest/img/the_library.png'); /* Adjust the image path as needed */
+            background-image: url('img/the_library.png'); /* Adjust the image path as needed */
             background-size: cover;
             background-position: center;
             padding: 300px 0; /* Adjust the padding as needed */
@@ -28,7 +28,7 @@
         }
 
         .trailer-section {
-            background-image: url('http://localhost/KwentoQuest/img/Kadiliman_Preview.jpg'); /* Adjust the image path as needed */
+            background-image: url('img/Kadiliman_Preview.jpg'); /* Adjust the image path as needed */
             background-size: cover;
             background-position: center;
             padding: 300px 0; /* Adjust the padding as needed */
@@ -36,7 +36,7 @@
         }
 
         .characters-section {
-            background-image: url('http://localhost/KwentoQuest/img/the_library.png'); /* Adjust the image path as needed */
+            background-image: url('img/the_library.png'); /* Adjust the image path as needed */
             background-size: cover;
             background-position: center;
             padding: 300px 0; /* Adjust the padding as needed */
@@ -44,7 +44,7 @@
         }
 
         .gameplay-section {
-            background-image: url('http://localhost/KwentoQuest/img/Kadiliman_Preview.jpg'); /* Adjust the image path as needed */
+            background-image: url('img/Kadiliman_Preview.jpg'); /* Adjust the image path as needed */
             background-size: cover;
             background-position: center;
             padding: 300px 0; /* Adjust the padding as needed */
@@ -52,7 +52,7 @@
         }
 
         .install-section {
-            background-image: url('http://localhost/KwentoQuest/img/the_library.png'); /* Adjust the image path as needed */
+            background-image: url('img/the_library.png'); /* Adjust the image path as needed */
             background-size: cover;
             background-position: center;
             padding: 300px 0; /* Adjust the padding as needed */
@@ -107,7 +107,7 @@
         }
 
         .image_divider2 {
-            background-image: url('http://localhost/KwentoQuest/img/About2.png'); /* Adjust the image path as needed */
+            background-image: url('img/About2.png'); /* Adjust the image path as needed */
             background-position: 50% 1; /* Adjust to 'left', 'right', 'center', 'top', 'bottom', or percentages */
             background-size: cover;
             height: 700px;
@@ -115,7 +115,7 @@
         }
 
         .image_divider3 {
-            background-image: url('http://localhost/KwentoQuest/img/AboveTrailer.png'); /* Adjust the image path as needed */
+            background-image: url('img/AboveTrailer.png'); /* Adjust the image path as needed */
             background-position: 50% 1; /* Adjust to 'left', 'right', 'center', 'top', 'bottom', or percentages */
             background-size: cover;
             height: 400px;
@@ -123,7 +123,7 @@
         }
 
         .image_divider {
-            background-image: url('http://localhost/KwentoQuest/img/MainBG.png'); /* Adjust the image path as needed */
+            background-image: url('img/MainBG.png'); /* Adjust the image path as needed */
             background-position: 50% 1; /* Adjust to 'left', 'right', 'center', 'top', 'bottom', or percentages */
             background-size: cover;
             height: 400px;
@@ -144,7 +144,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="#">
-                <img src="http://localhost/KwentoQuest/img/kq_logo_1.png" alt="Logo" style="height: 30px; margin-right: 10px;">
+                <img src="img/kq_logo_1.png" alt="Logo" style="height: 30px; margin-right: 10px;">
                 <span>Kwento Quest</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -187,7 +187,7 @@
         <div class="container">
             <h1 class="lead">Trailer</h1>
             <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="http://localhost/KwentoQuest/img/KADILIMAN_TEASERDRAF.mp4" allowfullscreen></iframe>
+                <iframe class="embed-responsive-item" src="img/KADILIMAN_TEASERDRAF.mp4" allowfullscreen></iframe>
             </div>
         </div>
     </section>
@@ -200,49 +200,49 @@
             <div id="characterCarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="http://localhost/KwentoQuest/img/maxine.jpg" class="d-block w-100" alt="Character 1">
+                        <img src="img/maxine.jpg" class="d-block w-100" alt="Character 1">
                         <div class="carousel-caption d-none d-md-block">
                             <h5 class="lead4">Maxine</h5>
                             <p class="lead3">Maxine is supposedly a medical student who currently studies at Wright-Ridley Medical School. However, she finds herself within decrepit hallways rather than a functioning medical facility. Driven by fear and curiosity, she must figure out the mystery behind Wright-Ridley in hopes of escaping its walls.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="http://localhost/KwentoQuest/img/tikbalang.jpg" class="d-block w-100" alt="Character 2">
+                        <img src="img/tikbalang.jpg" class="d-block w-100" alt="Character 2">
                         <div class="carousel-caption d-none d-md-block">
                             <h5 class="lead4">Tikbalang</h5>
                             <p class="lead3"> This Tikbalang currently resides within the Infinite Library, shuffling between the rows of shelves. An unfortunate fellow, his transformation into an Aswang was a botched one, with parts of his body twisted and rotting off.  He roams the library crying for help, only for those cries to be mistaken for haunting moans.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="http://localhost/KwentoQuest/img/tiyanak.jpg" class="d-block w-100" alt="Character 3">
+                        <img src="img/tiyanak.jpg" class="d-block w-100" alt="Character 3">
                         <div class="carousel-caption d-none d-md-block">
                             <h5 class="lead4">Tiyanak</h5>
                             <p class="lead3">Within the confines of the Morgue resides the Tiyanak, a devilish little creature. It seems to have been stillborn and has been resurrected recently, with no mother in sight. That doesn't mean it's not itching for.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="http://localhost/KwentoQuest/img/kapre.jpg" class="d-block w-100" alt="Character 4">
+                        <img src="img/kapre.jpg" class="d-block w-100" alt="Character 4">
                         <div class="carousel-caption d-none d-md-block">
                             <h5 class="lead4">Kapre</h5>
                             <p class="lead3">The Kapre is a tall, brooding figure who sits on a large tree located within the facility's courtyard. He does not talk much, unless annoyed or prompted to. Strangely enough, he doesn't seem to have a large cigar on hand like most kapres do.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="http://localhost/KwentoQuest/img/mananangal.jpg" class="d-block w-100" alt="Character 5">
+                        <img src="img/mananangal.jpg" class="d-block w-100" alt="Character 5">
                         <div class="carousel-caption d-none d-md-block">
                             <h5 class="lead4">Mananangal</h5>
                             <p class="lead3">The Manananggal is probably the most dangerous Aswang within the Wright-Ridley Medical School. She is sometimes seen circling above the Medical School Building, like vultures on a carcass. Rumor has it that no weary soul has ever survived an encounter with her, nor found her lower half without having died trying.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="http://localhost/KwentoQuest/img/mangkukulam.jpg" class="d-block w-100" alt="Character 6">
+                        <img src="img/mangkukulam.jpg" class="d-block w-100" alt="Character 6">
                         <div class="carousel-caption d-none d-md-block">
                             <h5 class="lead4">Mangkukulam</h5>
                             <p class="lead3">Little is known about the Mangkukulam. Old folk tales say she was wrongfully kicked out of her own land. Others believe she stole it from American soldiers who have already set up camp. Whatever the reason, her undead soul remains furious, living on</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="http://localhost/KwentoQuest/img/Siokoy.jpg" class="d-block w-100" alt="Character 7">
+                        <img src="img/Siokoy.jpg" class="d-block w-100" alt="Character 7">
                         <div class="carousel-caption d-none d-md-block">
                             <h5 class="lead4">Siokoy</h5>
                             <p class="lead3">Little is known about the Mangkukulam. Old folk tales say she was wrongfully kicked out of her own land. Others believe she stole it from American soldiers who have already set up camp. Whatever the reason, her undead soul remains furious, living on</p>
@@ -270,14 +270,14 @@
             <div class="row">
                 <div class="col-md-6 mb-4">
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="http://localhost/KwentoQuest/img/KADILIMAN_TEASERDRAF.mp4" allowfullscreen></iframe>
+                        <iframe class="embed-responsive-item" src="img/KADILIMAN_TEASERDRAF.mp4" allowfullscreen></iframe>
                     </div>
                     <h2>Stealth</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="http://localhost/KwentoQuest/img/KADILIMAN_TEASERDRAF.mp4" allowfullscreen></iframe>
+                        <iframe class="embed-responsive-item" src="img/KADILIMAN_TEASERDRAF.mp4" allowfullscreen></iframe>
                     </div>
                     <h2>Resource Management</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
