--- a/Art.html
+++ b/Art.html
@@ -126,7 +126,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
-                <img src="http://localhost/KwentoQuest/img/kq_logo_1.png" alt="Logo" style="height: 30px; margin-right: 10px;">
+                <img src="img/kq_logo_1.png" alt="Logo" style="height: 30px; margin-right: 10px;">
                 <span>Kwento Quest</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -160,29 +160,29 @@
             <div class="container text-center">
                 <h1>Artworks</h1>
                 <div class="artworks-gallery">
-                    <a href="http://localhost/KwentoQuest/img/maxine.jpg" data-lightbox="artworks" data-title="Maxine">
-                        <img src="http://localhost/KwentoQuest/img/maxine.jpg" alt="Artwork 1">
+                    <a href="img/maxine.jpg" data-lightbox="artworks" data-title="Maxine">
+                        <img src="img/maxine.jpg" alt="Artwork 1">
                     </a>
-                    <a href="http://localhost/KwentoQuest/img/mananangal.jpg" data-lightbox="artworks" data-title="Mananangal">
-                        <img src="http://localhost/KwentoQuest/img/mananangal.jpg" alt="Artwork 2">
+                    <a href="img/mananangal.jpg" data-lightbox="artworks" data-title="Mananangal">
+                        <img src="img/mananangal.jpg" alt="Artwork 2">
                     </a>
-                    <a href="http://localhost/KwentoQuest/img/mangkukulam.jpg" data-lightbox="artworks" data-title="Mangkukulam">
-                        <img src="http://localhost/KwentoQuest/img/mangkukulam.jpg" alt="Artwork 3">
+                    <a href="img/mangkukulam.jpg" data-lightbox="artworks" data-title="Mangkukulam">
+                        <img src="img/mangkukulam.jpg" alt="Artwork 3">
                     </a>
-                    <a href="http://localhost/KwentoQuest/img/Siokoy.jpg" data-lightbox="artworks" data-title="Siokoy">
-                        <img src="http://localhost/KwentoQuest/img/Siokoy.jpg" alt="Artwork 4">
+                    <a href="img/Siokoy.jpg" data-lightbox="artworks" data-title="Siokoy">
+                        <img src="img/Siokoy.jpg" alt="Artwork 4">
                     </a>
-                    <a href="http://localhost/KwentoQuest/img/tikbalang.jpg" data-lightbox="artworks" data-title="Tikbalang">
-                        <img src="http://localhost/KwentoQuest/img/tikbalang.jpg" alt="Artwork 5">
+                    <a href="img/tikbalang.jpg" data-lightbox="artworks" data-title="Tikbalang">
+                        <img src="img/tikbalang.jpg" alt="Artwork 5">
                     </a>
-                    <a href="http://localhost/KwentoQuest/img/tiyanak.jpg" data-lightbox="artworks" data-title="Tiyanak">
-                        <img src="http://localhost/KwentoQuest/img/tiyanak.jpg" alt="Artwork 6">
+                    <a href="img/tiyanak.jpg" data-lightbox="artworks" data-title="Tiyanak">
+                        <img src="img/tiyanak.jpg" alt="Artwork 6">
                     </a>
-                    <a href="http://localhost/KwentoQuest/img/weeping.jpg" data-lightbox="artworks" data-title="Weeping">
-                        <img src="http://localhost/KwentoQuest/img/weeping.jpg" alt="Artwork 7">
+                    <a href="img/weeping.jpg" data-lightbox="artworks" data-title="Weeping">
+                        <img src="img/weeping.jpg" alt="Artwork 7">
                     </a>
-                    <a href="http://localhost/KwentoQuest/img/kapre.jpg" data-lightbox="artworks" data-title="Kapre">
-                        <img src="http://localhost/KwentoQuest/img/kapre.jpg" alt="Artwork 8">
+                    <a href="img/kapre.jpg" data-lightbox="artworks" data-title="Kapre">
+                        <img src="img/kapre.jpg" alt="Artwork 8">
                     </a>
                 </div>
             </div>
