--- a/home.html
+++ b/home.html
@@ -207,17 +207,45 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="img/josef.jpg" class="d-block w-100" alt="Character 2">
+                        <img src="img/tikbalang.jpg" class="d-block w-100" alt="Character 2">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5 class="lead4">Josef</h5>
-                            <p class="lead3">Josef is a senior medical student at Wright-Ridley Medical School. Known for his calm demeanor and logical thinking, he tries to piece together the mysterious occurrences in the school. Josef's journey is filled with unexpected twists as he delves deeper into the secrets of the institution.</p>
+                            <h5 class="lead4">Tikbalang</h5>
+                            <p class="lead3"> This Tikbalang currently resides within the Infinite Library, shuffling between the rows of shelves. An unfortunate fellow, his transformation into an Aswang was a botched one, with parts of his body twisted and rotting off.  He roams the library crying for help, only for those cries to be mistaken for haunting moans.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="img/anne.jpg" class="d-block w-100" alt="Character 3">
+                        <img src="img/tiyanak.jpg" class="d-block w-100" alt="Character 3">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5 class="lead4">Anne</h5>
-                            <p class="lead3">Anne, a first-year medical student, finds herself trapped in the eerie corridors of Wright-Ridley. With a strong sense of justice and determination, she navigates the haunted school, uncovering clues and facing dangers head-on. Anne's bravery and quick thinking make her a key player in the quest to escape.</p>
+                            <h5 class="lead4">Tiyanak</h5>
+                            <p class="lead3">Within the confines of the Morgue resides the Tiyanak, a devilish little creature. It seems to have been stillborn and has been resurrected recently, with no mother in sight. That doesn't mean it's not itching for.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/kapre.jpg" class="d-block w-100" alt="Character 4">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5 class="lead4">Kapre</h5>
+                            <p class="lead3">The Kapre is a tall, brooding figure who sits on a large tree located within the facility's courtyard. He does not talk much, unless annoyed or prompted to. Strangely enough, he doesn't seem to have a large cigar on hand like most kapres do.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/mananangal.jpg" class="d-block w-100" alt="Character 5">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5 class="lead4">Mananangal</h5>
+                            <p class="lead3">The Manananggal is probably the most dangerous Aswang within the Wright-Ridley Medical School. She is sometimes seen circling above the Medical School Building, like vultures on a carcass. Rumor has it that no weary soul has ever survived an encounter with her, nor found her lower half without having died trying.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/mangkukulam.jpg" class="d-block w-100" alt="Character 6">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5 class="lead4">Mangkukulam</h5>
+                            <p class="lead3">Little is known about the Mangkukulam. Old folk tales say she was wrongfully kicked out of her own land. Others believe she stole it from American soldiers who have already set up camp. Whatever the reason, her undead soul remains furious, living on</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/Siokoy.jpg" class="d-block w-100" alt="Character 7">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5 class="lead4">Siokoy</h5>
+                            <p class="lead3">Little is known about the Mangkukulam. Old folk tales say she was wrongfully kicked out of her own land. Others believe she stole it from American soldiers who have already set up camp. Whatever the reason, her undead soul remains furious, living on</p>
                         </div>
                     </div>
                 </div>
@@ -233,13 +261,27 @@
         </div>
     </section>
 
-    <!-- Gameplay Section -->
-    <section class="image_divider"></section>
+
+     <!-- Gameplay Section -->
+     <section class="image_divider"></section>
     <section id="gameplay" class="gameplay-section text-center">
         <div class="container">
             <h1 class="lead">Gameplay</h1>
-            <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="img/Game_Play.mp4" allowfullscreen></iframe>
+            <div class="row">
+                <div class="col-md-6 mb-4">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="img/KADILIMAN_TEASERDRAF.mp4" allowfullscreen></iframe>
+                    </div>
+                    <h2>Stealth</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="img/KADILIMAN_TEASERDRAF.mp4" allowfullscreen></iframe>
+                    </div>
+                    <h2>Resource Management</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -249,13 +291,16 @@
     <section id="install" class="install-section text-center">
         <div class="container">
             <h1 class="lead">Install</h1>
-            <p class="lead3">Coming Soon...</p>
+            <p class="lead2">Download and install Kadiliman to start your nightmare journey.</p>
+            <button class="btn btn-primary">Download</button>
         </div>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2023 Kwento Quest. All Rights Reserved.</p>
+        <div class="container">
+            <p>&copy; 2023 Kwento Quest. All rights reserved.</p>
+        </div>
     </footer>
 
     <!-- Bootstrap JS and dependencies -->
