--- a/home.html
+++ b/home.html
@@ -192,8 +192,8 @@
         </div>
     </section>
 
-      <!-- Characters Section -->
-      <section class="image_divider"></section>
+    <!-- Characters Section -->
+    <section class="image_divider"></section>
     <section id="characters" class="characters-section text-center">
         <div class="container">
             <h1 class="lead">Characters</h1>
@@ -203,49 +203,21 @@
                         <img src="img/maxine.jpg" class="d-block w-100" alt="Character 1">
                         <div class="carousel-caption d-none d-md-block">
                             <h5 class="lead4">Maxine</h5>
-                            <p class="lead3">Maxine is supposedly a medical student who currently studies at Wright-Ridley Medical School. However, she finds herself within decrepit hallways rather than a functioning medical facility. Driven by fear and curiosity, she must figure out the mystery behind Wright-Ridley in hopes of escaping its walls.</p>
+                            <p class="lead3">Maxine is supposedly a medical student who currently studies at Wright-Ridley Medical School. However, she finds herself within decrepit hallways rather than a functioning medical facility. Driven by fear and curiosity, she must figure out the mystery behind Wright-Ridley in hopes of escaping its hellish grip.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="img/tikbalang.jpg" class="d-block w-100" alt="Character 2">
+                        <img src="img/character2.jpg" class="d-block w-100" alt="Character 2">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5 class="lead4">Tikbalang</h5>
-                            <p class="lead3"> This Tikbalang currently resides within the Infinite Library, shuffling between the rows of shelves. An unfortunate fellow, his transformation into an Aswang was a botched one, with parts of his body twisted and rotting off.  He roams the library crying for help, only for those cries to be mistaken for haunting moans.</p>
+                            <h5 class="lead4">Character 2</h5>
+                            <p class="lead3">Description of Character 2 goes here.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="img/tiyanak.jpg" class="d-block w-100" alt="Character 3">
+                        <img src="img/character3.jpg" class="d-block w-100" alt="Character 3">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5 class="lead4">Tiyanak</h5>
-                            <p class="lead3">Within the confines of the Morgue resides the Tiyanak, a devilish little creature. It seems to have been stillborn and has been resurrected recently, with no mother in sight. That doesn't mean it's not itching for.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/kapre.jpg" class="d-block w-100" alt="Character 4">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5 class="lead4">Kapre</h5>
-                            <p class="lead3">The Kapre is a tall, brooding figure who sits on a large tree located within the facility's courtyard. He does not talk much, unless annoyed or prompted to. Strangely enough, he doesn't seem to have a large cigar on hand like most kapres do.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/mananangal.jpg" class="d-block w-100" alt="Character 5">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5 class="lead4">Mananangal</h5>
-                            <p class="lead3">The Manananggal is probably the most dangerous Aswang within the Wright-Ridley Medical School. She is sometimes seen circling above the Medical School Building, like vultures on a carcass. Rumor has it that no weary soul has ever survived an encounter with her, nor found her lower half without having died trying.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/mangkukulam.jpg" class="d-block w-100" alt="Character 6">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5 class="lead4">Mangkukulam</h5>
-                            <p class="lead3">Little is known about the Mangkukulam. Old folk tales say she was wrongfully kicked out of her own land. Others believe she stole it from American soldiers who have already set up camp. Whatever the reason, her undead soul remains furious, living on</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/Siokoy.jpg" class="d-block w-100" alt="Character 7">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5 class="lead4">Siokoy</h5>
-                            <p class="lead3">Little is known about the Mangkukulam. Old folk tales say she was wrongfully kicked out of her own land. Others believe she stole it from American soldiers who have already set up camp. Whatever the reason, her undead soul remains furious, living on</p>
+                            <h5 class="lead4">Character 3</h5>
+                            <p class="lead3">Description of Character 3 goes here.</p>
                         </div>
                     </div>
                 </div>
@@ -261,28 +233,12 @@
         </div>
     </section>
 
-
-     <!-- Gameplay Section -->
-     <section class="image_divider"></section>
+    <!-- Gameplay Section -->
+    <section class="image_divider3"></section>
     <section id="gameplay" class="gameplay-section text-center">
         <div class="container">
             <h1 class="lead">Gameplay</h1>
-            <div class="row">
-                <div class="col-md-6 mb-4">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="img/KADILIMAN_TEASERDRAF.mp4" allowfullscreen></iframe>
-                    </div>
-                    <h2>Stealth</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-                <div class="col-md-6 mb-4">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="img/KADILIMAN_TEASERDRAF.mp4" allowfullscreen></iframe>
-                    </div>
-                    <h2>Resource Management</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-            </div>
+            <p class="lead2">In Kadiliman, you will face various challenges that require stealth, puzzle-solving, and strategic thinking. The gameplay is designed to immerse you in a world where every decision counts and danger lurks around every corner.</p>
         </div>
     </section>
 
@@ -291,15 +247,15 @@
     <section id="install" class="install-section text-center">
         <div class="container">
             <h1 class="lead">Install</h1>
-            <p class="lead2">Download and install Kadiliman to start your nightmare journey.</p>
-            <button class="btn btn-primary">Download</button>
+            <p class="lead2">Experience the world of Kadiliman by installing the game now. Click the download button below to start your journey.</p>
+            <button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='https://itch.io/'">Download</button>
         </div>
     </section>
 
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2023 Kwento Quest. All rights reserved.</p>
+            <p>&copy; 2023 Your Company. All Rights Reserved.</p>
         </div>
     </footer>
 
