--- a/Aboutus.html
+++ b/Aboutus.html
@@ -144,7 +144,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
-                <img src="http://localhost/KwentoQuest/img/kq_logo_1.png" alt="Logo" style="height: 30px; margin-right: 10px;">
+                <img src="img/kq_logo_1.png" alt="Logo" style="height: 30px; margin-right: 10px;">
                 <span>Kwento Quest</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -179,27 +179,27 @@
                 <h1>About Us</h1>
                 <div class="team-gallery">
                     <div class="team-member">
-                        <img src="http://localhost/KwentoQuest/img/jovic.png" alt="Batbat, Vincent Joseph B.">
+                        <img src="img/jovic.png" alt="Batbat, Vincent Joseph B.">
                         <h2>Batbat, Vincent Joseph B.</h2>
                         <p>Writer and Concept Artist</p>
                     </div>
                     <div class="team-member">
-                        <img src="http://localhost/KwentoQuest/img/avatar2.png" alt="Dapat, Russel C.">
+                        <img src="img/aleah.png" alt="Dapat, Russel C.">
                         <h2>Dapat, Russel C.</h2>
                         <p>Character Modeling and Animator</p>
                     </div>
                     <div class="team-member">
-                        <img src="http://localhost/KwentoQuest/img/aleah.png" alt="Esguerra, Aleah Kyla">
+                        <img src="img/aleah.png" alt="Esguerra, Aleah Kyla">
                         <h2>Esguerra, Aleah Kyla</h2>
                         <p>3D Concept Artist</p>
                     </div>
                     <div class="team-member">
-                        <img src="http://localhost/KwentoQuest/img/mark.png" alt="Manalang, Mark J">
+                        <img src="img/mark.png" alt="Manalang, Mark J">
                         <h2>Manalang, Mark J</h2>
                         <p>Game Programmer</p>
                     </div>
                     <div class="team-member">
-                        <img src="http://localhost/KwentoQuest/img/Migy.png" alt="Manankil, Miguel Jesus P.">
+                        <img src="img/migs.jpg" alt="Manankil, Miguel Jesus P.">
                         <h2>Manankil, Miguel Jesus P.</h2>
                         <p>Game Designer and Environment Artist</p>
                     </div>
