--- a/Aboutus.html
+++ b/Aboutus.html
@@ -184,7 +184,7 @@
                         <p>Writer and Concept Artist</p>
                     </div>
                     <div class="team-member">
-                        <img src="img/aleah.png" alt="Dapat, Russel C.">
+                        <img src="img/russel.png" alt="Dapat, Russel C.">
                         <h2>Dapat, Russel C.</h2>
                         <p>Character Modeling and Animator</p>
                     </div>
