--- a/home.html
+++ b/home.html
@@ -137,6 +137,14 @@
             max-width: 100%; /* Maximum width */
             object-fit: contain; /* Fit within container */
         }
+
+        .image_divider2 {
+            background-image: url('img/WebBg1.png'); /* Adjust the image path as needed */
+            background-position: 50% 1; /* Adjust to 'left', 'right', 'center', 'top', 'bottom', or percentages */
+            background-size: cover;
+            height: 700px;
+            width: 100%;
+        }
     </style>
 </head>
 <body>
