--- a/news.html
+++ b/news.html
@@ -181,7 +181,7 @@
                 <div class="news-gallery">
                     <div class="news-item">
                         <a href="#" onclick="openLightbox('Beta Version 1 Live!', 'The beta version of the game is now live!')" data-title="Beta Version 1">
-                            <img src="http://localhost/KwentoQuest/img/BG.png" alt="News 1">
+                            <img src="/img/BG.png" alt="News 1">
                             <h2>Beta Version 1 Live!</h2>
                         </a>
                         <p>The beta version is now availbe to download!</p>
