--- a/home.html
+++ b/home.html
@@ -115,7 +115,28 @@
         }
 
         .image_divider3 {
-            background-image: url('img/AboveTrailer.png'); /* Adjust the image path as needed */
+            background-image: url('img/WebBg1.png'); /* Adjust the image path as needed */
+            background-position: 50% 1; /* Adjust to 'left', 'right', 'center', 'top', 'bottom', or percentages */
+            background-size: cover;
+            height: 400px;
+            width: 100%;
+        }
+        .image_divider4 {
+            background-image: url('img/WebBg2.png'); /* Adjust the image path as needed */
+            background-position: 50% 1; /* Adjust to 'left', 'right', 'center', 'top', 'bottom', or percentages */
+            background-size: cover;
+            height: 400px;
+            width: 100%;
+        }
+        .image_divider5 {
+            background-image: url('img/WebBg3.png'); /* Adjust the image path as needed */
+            background-position: 50% 1; /* Adjust to 'left', 'right', 'center', 'top', 'bottom', or percentages */
+            background-size: cover;
+            height: 400px;
+            width: 100%;
+        }
+        .image_divider6 {
+            background-image: url('img/WebBg4.png'); /* Adjust the image path as needed */
             background-position: 50% 1; /* Adjust to 'left', 'right', 'center', 'top', 'bottom', or percentages */
             background-size: cover;
             height: 400px;
@@ -193,7 +214,7 @@
     </section>
 
       <!-- Characters Section -->
-      <section class="image_divider"></section>
+      <section class="image_divider4"></section>
     <section id="characters" class="characters-section text-center">
         <div class="container">
             <h1 class="lead">Characters</h1>
@@ -263,7 +284,7 @@
 
 
      <!-- Gameplay Section -->
-     <section class="image_divider"></section>
+     <section class="image_divider5"></section>
     <section id="gameplay" class="gameplay-section text-center">
         <div class="container">
             <h1 class="lead">Gameplay</h1>
@@ -287,7 +308,7 @@
     </section>
 
     <!-- Install Section -->
-    <section class="image_divider"></section>
+    <section class="image_divider6"></section>
     <section id="install" class="install-section text-center">
         <div class="container">
             <h1 class="lead">Install</h1>
